[gd_scene load_steps=14 format=2]

[ext_resource path="res://power_up/PowerUp.gd" type="Script" id=1]
[ext_resource path="res://power_up/pow-frame-1.png" type="Texture" id=2]
[ext_resource path="res://power_up/pow-frame-2.png" type="Texture" id=3]
[ext_resource path="res://power_up/pow-frame-3.png" type="Texture" id=4]
[ext_resource path="res://power_up/pow-frame-4.png" type="Texture" id=5]
[ext_resource path="res://power_up/pow-frame-5.png" type="Texture" id=6]
[ext_resource path="res://power_up/pow-frame-6.png" type="Texture" id=7]
[ext_resource path="res://power_up/pow-frame-7.png" type="Texture" id=8]
[ext_resource path="res://power_up/pow-frame-8.png" type="Texture" id=9]
[ext_resource path="res://power_up/pow-frame-9.png" type="Texture" id=10]
[ext_resource path="res://power_up/pow-frame-10.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": false,
"name": "shine",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 25.0

[node name="PowerUp" type="Area2D" groups=[
"powerups",
]]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Z Index" ]
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "shine"
frame = 9
playing = true
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 2 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Tween" type="Tween" parent="." index="2"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="LifeTime" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = true

[node name="Timer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="area_entered" from="." to="." method="_on_PowerUp_area_entered"]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]

[connection signal="timeout" from="LifeTime" to="." method="_on_LifeTime_timeout"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


